another small css fix for billing-term spacing on mobile.

--- a/client/my-sites/plans/jetpack-plans/jetpack-complete-page/item-price/style.scss
+++ b/client/my-sites/plans/jetpack-plans/jetpack-complete-page/item-price/style.scss
@@ -45,7 +45,10 @@
 
 .display-price__billing-time-frame {
 	display: table;
-	margin-top: 7px;
+	margin-top: 12px;
+	@include break-medium {
+		margin-bottom: 7px;
+	}
 }
 
 .item-price__complete .display-price.is-placeholder .plan-price {
